fixed navbar z-index and mobile hidden battle menu bug.

--- a/src/components/Battle/BattleScene.css
+++ b/src/components/Battle/BattleScene.css
@@ -4,4 +4,5 @@
     width: 100%;
     max-width: 600px;
     margin: 0 auto;
+    min-height: 85vh;
 }
