--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -11,6 +11,7 @@
     left: 0;
     top: 0;
     position: fixed;
+    z-index: 5;
 }
 
 nav {
